--- a/mysql.yaml
+++ b/mysql.yaml
@@ -1,6 +1,9 @@
 - name: mysql configuration
   hosts: mysql
   become: yes
+  vars:
+   mysql_root_password: ExpenseApp@1
+   login_host: mysql.sivadevops.fun
   tasks:
   - name: install mysql
     ansible.builtin.package:
@@ -12,3 +15,19 @@
      name: mysql-server
      state: started
      enabled: yes
+
+  - name: connect mysql server 
+    ansible.builtin.mysql.mysql_info: 
+     login_user: root
+     login_password: "{{ mysql_root_password }}"
+     login_host: "{{ login_host }}"
+    ignore_errors: true
+    register: mysql_info 
+
+  - name: print mysql mysql info 
+    ansible.builtin.debug:
+     msg: " {{ mysql_info }}"
+
+  - name: setup Mysql root password 
+    ansible.builtin.command: "mysql_secure_installation --set-root-pass {{ mysql_root_password }}"
+    when: mysql_info.failed is true 
