--- a/inventory.ini
+++ b/inventory.ini
@@ -1,6 +1,5 @@
 [mysql]
 mysql.sivadevops.fun
-172.31.81.150
 
 [backend]
 backend.sivadevops.fun
@@ -9,5 +8,5 @@ backend.sivadevops.fun
 frontend.sivadevops.fun
 
 [all:vars]
-ec2_user=ec2-user 
-ec2_password=DevOps321 
+ansible__user=ec2-user 
+ansible__password=DevOps321 
