--- a/inventory.ini
+++ b/inventory.ini
@@ -8,5 +8,5 @@ backend.sivadevops.fun
 frontend.sivadevops.fun
 
 [all:vars]
-ansible__user=ec2-user 
-ansible__password=DevOps321 
+ansible_user=ec2-user 
+ansible_password=DevOps321 
