--- a/mysql.yaml
+++ b/mysql.yaml
@@ -10,7 +10,7 @@
       name:
       - PyMySQL
       executable: pip3.9
-      
+
   - name: install mysql
     ansible.builtin.package:
      name: mysql-server
@@ -18,7 +18,7 @@
 
   - name: start and enable mysql
     ansible.builtin.service:
-     name: mysql-server
+     name: mysqld
      state: started
      enabled: yes
 
