--- a/backend.yaml
+++ b/backend.yaml
@@ -35,6 +35,7 @@
     ansible.builtin.unarchive:
      src: /tmp/backend.zip #by default ansible thinks this is in ansible server
      dest: /app 
+     remote_src: yes
 
   - name: Install the dependencies
     ansible.builtin.command: npm install 
