--- a/backend.yaml
+++ b/backend.yaml
@@ -70,7 +70,8 @@
 
   - name: daemon reload
     ansible.builtin.systemd_service:
-     daemon_reolad: true
+     daemon_reload: true
      name: backend 
-     state: started 
+     state: restarted 
+     
      
