--- a/frontend.yaml
+++ b/frontend.yaml
@@ -5,7 +5,7 @@
   - name: Install nginx 
     ansible.builtin.package:
      name: nginx 
-     state: started 
+     state: present 
 
   - name: start and enable nginx 
     ansible.builtin.service:
