--- a/frontend.yaml
+++ b/frontend.yaml
@@ -20,7 +20,7 @@
 
   - name: create html directory 
     ansible.builtin.file:
-     path: /usr/app/nginx/html 
+     path: /usr/share/nginx/html 
      state: directory 
 
   - name: Download the frontend code 
